--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svg-to-zingchart",
+  "name": "main",
   "version": "1.0.0",
   "description": "",
   "main": "bundle.js",
@@ -18,6 +18,12 @@
   },
   "homepage": "https://github.com/tessahelenmartin/svg-to-zingchart#readme",
   "dependencies": {
+    "bluebird": "^3.4.1",
+    "cls-bluebird": "^1.1.3",
+    "json-loader": "^0.5.4",
+    "pokedex-promise-v2": "^2.1.0",
+    "require": "^2.4.20",
+    "requirejs": "^2.2.0",
     "zingchart": "^2.4.0"
   },
   "devDependencies": {
