--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.4.1",
     "cls-bluebird": "^1.1.3",
+    "css-loader": "^0.23.1",
     "json-loader": "^0.5.4",
     "pokedex-promise-v2": "^2.1.0",
     "require": "^2.4.20",
@@ -27,6 +28,7 @@
     "zingchart": "^2.4.0"
   },
   "devDependencies": {
+    "css-loader": "^0.23.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
