Final CSS and finishing touches

--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@ application.py
 sortout_methods.py
 .idea
 Pokemon-ZingChart-173d4d458258.json
-index2.html
-main2.html
+index_copy.html
+main_copy.html
