--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ sortout_methods.py
 Pokemon-ZingChart-173d4d458258.json
 index_copy.html
 main_copy.html
+bezier.js
+index_copy.html
+main_copy.css
+npm-debug.log
+svg-to-zing.js
+__webpack.config.js
+.gitignore
