--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.23.1",
+    "tether": "^1.3.4",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   }
